auto-test/tests/chapter_18/invalid_types/incompatible_types/struct_pointer_param_mismatch.c
struct s1 {
    int a;
};

struct s2 {
    int a;
};

int get_a(struct s1 *ptr) {
    return ptr->a;
}

int main(void) {
    struct s2 arg = {1};
    
    return get_a(&arg);
}